# mastermind_copilot

./: CMakeLists.txt  conan.cmake
src/: game.cpp  game.h  game_io.h  main.cpp
test/: test.cpp
